; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/brcm80211/brcmsmac/phy/extr_phy_cmn.c_wlc_phy_txpower_ipa_ison.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/brcm80211/brcmsmac/phy/extr_phy_cmn.c_wlc_phy_txpower_ipa_ison.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.brcms_phy_pub = type { i32 }
%struct.brcms_phy = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @wlc_phy_txpower_ipa_ison(%struct.brcms_phy_pub* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.brcms_phy_pub*, align 8
  %4 = alloca %struct.brcms_phy*, align 8
  store %struct.brcms_phy_pub* %0, %struct.brcms_phy_pub** %3, align 8
  %5 = load %struct.brcms_phy_pub*, %struct.brcms_phy_pub** %3, align 8
  %6 = bitcast %struct.brcms_phy_pub* %5 to %struct.brcms_phy*
  store %struct.brcms_phy* %6, %struct.brcms_phy** %4, align 8
  %7 = load %struct.brcms_phy*, %struct.brcms_phy** %4, align 8
  %8 = call i64 @ISNPHY(%struct.brcms_phy* %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %1
  %11 = load %struct.brcms_phy*, %struct.brcms_phy** %4, align 8
  %12 = call i32 @wlc_phy_n_txpower_ipa_ison(%struct.brcms_phy* %11)
  store i32 %12, i32* %2, align 4
  br label %14

13:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %14

14:                                               ; preds = %13, %10
  %15 = load i32, i32* %2, align 4
  ret i32 %15
}

declare dso_local i64 @ISNPHY(%struct.brcms_phy*) #1

declare dso_local i32 @wlc_phy_n_txpower_ipa_ison(%struct.brcms_phy*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
